# EAE_Firmware

./: CMakeLists.txt  LICENSE  README.md  main.sh  tests.sh
src/: CMakeLists.txt  controller.cpp  controller.h  fsm.cpp  fsm.h  hal.cpp  hal.h  main.cpp
tests/: CMakeLists.txt  main.cpp
